[package]
name = "leblad"
version = "1.0.0"
edition = "2021"
authors = ["Omar Belghaouti <omarbelghaouti@gmail.com>"]
description = "A rust library providing a list of Algerian administrative areas with many useful APIs, based on dzcode-io/leblad"
license-file = "LICENSE"
repository = "https://github.com/omdxp/leblad-rs"
readme = "README.md"
keywords = ["complex", "number", "math"]

[build-dependencies]
tokio = { version = "1.35.1", features = ["full"] }
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
